synaptic (0.71) UNRELEASED; urgency=low

  [ Michael Vogt ]
  * show changelog button alongside the screenshot button
  * make sure /etc/apt/apt.conf.d/99synaptic is mode 644
    (LP: #637157)
  * common/rpackagecache.cc:
    - read pindir as well as the pinfile (LP: #628818)

  [ Luca Falavigna ]
  * common/rpackageview.cc:
    - Do not display base packages in manual view.
  
 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 10 Nov 2010 19:44:31 +0100

synaptic (0.70) unstable; urgency=low
  
  * po/hu.po:
    - updated, thanks to Gabor Kum 
  * fix some linitian warnings
  
 -- Michael Vogt <mvo@debian.org>  Mon, 06 Dec 2010 16:44:24 +0100

synaptic (0.70~pre2) unstable; urgency=low

  [ Michael Vogt ]
  * po/pt_BR.po:
    - updated, thanks to Sergio Cipolla  (closes: #593758)
  * po/id.po:
    - added, thanks to Dirgita
  * po/ru.po:
    - updated, thansk to Yuri Kozlov (closes: #571712)
  * po/de.po:
    - fix fuzzy string, thanks to Alek (closes: #599744)
  * po/et.po:
    - updated, thanks to Guido Tabbernuk
  * po/he.po:
    - updated, thanks to Lior Kaplan and Sergio Cipolla 
      (closes: #586940)
  * gtk/rgdebinstallprogress.cc, gtk/rgterminstallprogress.cc:
    - fix FTBFS on latest vte (closes: #597384)
  * common/rpackagecache.{cc,h}, common/rpackage.cc:
    - add cache for PkgFileIterator->pkgIndexFile* to speed up
      RPackage::IsTrusted (LP: #165181)
  * gtk/rgdebinstallprogress.cc:
    - merge fix for error string if those contain a ":" 
      (LP: #600658), thanks to Jonathan Thomas and Jean-Baptiste Lallement 
  * common/rpackagelister.cc:
    - when sorting by support status use STL stable_parition to speed
      up the list view (thanks to David Purcell)
    - when clicking on the "supported" column, default to showing the
      supported items first, then the unsupported ones
  * gtk/rgmainwindow.cc:
    - show message in quick search label if no apt-xapian-index can
      be found
  
   [ Jean-Baptiste Lallement ]