@@ -6,6 +6,8 @@ synaptic (0.71) UNRELEASED; urgency=low
     (LP: #637157)
   * common/rpackagecache.cc:
     - read pindir as well as the pinfile (LP: #628818)
+  * when reading markings, ensure the views are refreshed
+    so that broken dependencies are displayed
 
   [ Luca Falavigna ]
   * common/rpackageview.cc:
